--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,33 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
 
+deploy:
+  machine:
+    enabled: true
+
+  working_directory: ~/client
+
+  steps:
+    - add_ssh_keys:
+        fingerprints:
+          - "21:0c:72:57:0f:5d:f6:24:e8:e3:6a:cf:34:bc:a6:4f"
+    - checkout
+    - run:
+        name: Push Master to Production
+        command: |
+          git push https://github.com/aproperzi2/scheduler master:production
+
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
